Fix cta button wrap bug

--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ h3 {
 
 .cta-button {
     border: 2px solid white;
+    text-wrap: nowrap;
 }
 
 .footer {
